# homik

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.claude/commands/: fix-lint.md  fix-test.md  pr-description.md  review-comments.md  til.md  update-spec.md
.claude/prompts/: skill-template.md
.github/workflows/: claude-review.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/auth/: backend.py  users.py
backend/app/models/: __init__.py  batch.py  category.py  household.py  item.py  location.py  user.py
backend/app/routers/: batches.py  categories.py  household.py  items.py  locations.py  lookup.py
backend/tests/: conftest.py  test_auth.py  test_batches.py  test_categories.py  test_items.py  test_locations.py
docs/: spec.md  til.md
frontend/: package-lock.json  package.json
scripts/: create-pr.sh  fetch-pr-comments.sh  run-lint.sh  run-tests.sh
